# lambda-layer-workflow

./: .pre-commit-config.yaml  README.md  libraries.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: cp_to_s3.yaml  lambda-layers.yaml  plan.yaml
example/: main.tf  providers.tf  variables.tf
modules/lambda_layers/: main.tf  outputs.tf  variables.tf
