[tool.poetry]
name = "infra-playground"
version = "0.1.0"
description = ""
authors = ["jimmfan <jimmfan@github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
boto3 = "^1.26.33"
aws-xray-sdk = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
isort = "^5.11.2"
black = "^22.12.0"
moto = "^4.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "*__init__.py*"
]